<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailSportAdapter"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/detail_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                tools:src="@tools:sample/avatars"/>

            <TextView
                style="@style/TextContent.Small.White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="#4D000000"
                android:drawableStart="@drawable/ic_baseline_favorite_border_24"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/like"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </FrameLayout>

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/azure"
            android:textStyle="bold"
            android:drawableRight="@drawable/ic_baseline_sports_basketball_24"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            tools:text="@string/sport_name"/>


        <TextView
            android:id="@+id/info_tage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="5dp"
            android:textStyle="italic"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/detail_detail"
            android:text="@string/info"/>

        <TextView
            android:id="@+id/detail_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            tools:text="@string/detail"/>

        <TextView
            android:id="@+id/deskripsi_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="5dp"
            android:textStyle="italic"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/detail_detail"
            android:text="Description"/>

        <TextView
            android:id="@+id/detail_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            tools:text="@string/desc"/>

        <TextView
            android:id="@+id/detail_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/link"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/action_favorite"
                android:text="@string/favorite"
                android:drawableRight="@drawable/ic_baseline_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                />

            <Button
                android:id="@+id/action_share"
                android:text="@string/share"
                android:drawableRight="@drawable/ic_baseline_share_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                />

        </LinearLayout>

    </LinearLayout>

</ScrollView>