<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutPage">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerVertical="true"
                android:src="@drawable/zaenal"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/azure"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutme"
                android:textAlignment="center"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="16sp"
                android:textColor="@color/teal_200"
                android:layout_marginTop="5dp"/>

            <Button
                android:id="@+id/action_share"
                android:text="Follow me"
                android:drawableRight="@drawable/ic_baseline_how_to_reg_24"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                />


        </LinearLayout>

</RelativeLayout>

